fixed: no columns shift on first load

--- a/style.css
+++ b/style.css
@@ -77,10 +77,18 @@
     }
 
     .album__col {
-        transform: translate3d(0px, 10vh, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
         transform-style: preserve-3d;
     }
-    
+
+    .col-1,
+    .col-3 {
+        transform: translate3d(0px, 10vh, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
+    }    
+
+    .col-2,
+    .col-4 {
+        transform: translate3d(0px, -10vh, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
+    }    
 
     .col-4 {
         display: flex
